--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,15 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-    background-image:url('/assets/city-8bit.gif');
-    background-repeat: repeat;
-    background-size: cover;
-    position: absolute;
-    top: 0%;
-    bottom:0%;
-    left: 0%;
-    right: 0%;
-    font-family: 'Poppins', sans-serif;
+  background-image:url('/assets/city-8bit.gif');
+  background-repeat: repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0%;
+  bottom:0%;
+  left: 0%;
+  right: 0%;
+  font-family: 'Poppins', sans-serif;
+}
+
+div.mute-button {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100px;
+  height: 100px;
+  background-image: url('/assets/volume-on.png');
+  background-size: 100px 100px;
+}
+
+div.mute-button.active {
+  background-image: url('/assets/volume-off.png');
 }
 
 .menu-container {
