--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-    background-image:url('/assets/city-8bit.gif');
-    background-repeat: repeat;
-    background-size: cover;
-    position: absolute;
+    background-image: url('/assets/city-8bit.gif');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     top: 0%;
     bottom:0%;
     left: 0%;
@@ -77,6 +77,7 @@ body {
   width: auto;
   will-change: transform,opacity;
   z-index: 0;
+  margin-bottom: 1rem;
 }
 
 .start-button:hover {
@@ -113,6 +114,12 @@ body {
 .start-button:disabled {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
+
+.table.is-fullwidth.is-striped {
+  padding:5rem;
+  background-color: white;
+  text-align: center;
+  };
 
 
 
