--- a/public/css/app.css
+++ b/public/css/app.css
@@ -117,9 +117,15 @@ body {
 
 .table.is-fullwidth.is-striped {
   padding:5rem;
-  background-color: white;
   text-align: center;
-  };
+  align-items: center;
+  background-color: white;
+  border-radius: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border: 2px solid green;
+};
 
 
 
