--- a/public/css/app.css
+++ b/public/css/app.css
@@ -115,6 +115,10 @@ body {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
 
+thead {
+    color: green;
+}
+
 .table.is-fullwidth.is-striped {
   padding:5rem;
   text-align: center;
@@ -126,6 +130,8 @@ body {
   width: 50%;
   border: 2px solid green;
 };
+
+
 
 
 
