--- a/public/css/app.css
+++ b/public/css/app.css
@@ -114,16 +114,27 @@ body {
 .start-button:disabled {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
+.add-player, .button.is-primary {
+    color: green;
+    border: 2px solid green;
+
+}
+
+.button.is-primary, .button.is-warning, button.is-light  {
+    color: green;
+    border: 2px solid green;
+    border-radius: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    padding:1rem;
+    width: 10%;
+}
 
 thead {
     color: green;
     font-size: 30px;
 
 }
-
-
-
-
 
 
 .table.is-fullwidth.is-striped {
