--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-    background-image: url('/assets/city-8bit.gif');
+    background-image: url('/assets/img/city-8bit.gif');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
@@ -10,6 +10,7 @@ body {
     left: 0%;
     right: 0%;
     font-family: 'Poppins', sans-serif;
+}
 
 div.mute-button {
   position: absolute;
