--- a/public/css/authentication.css
+++ b/public/css/authentication.css
@@ -22,10 +22,46 @@
     height: 5vh;
 }
 
-#submit-container {
+/* #submit-container {
     padding: 1vh 1vw;
-}
+} */
 
 #register-button {
-    color: blue
+    text-decoration: none;
+    background-color: aquamarine;
+}
+
+#register-button:hover {
+    padding-right: 2vw;
+    padding-left: 2vw;
+    color: black;
+    background-color: rgb(109, 218, 181);
+}
+
+#username {
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: calc(0.8vw + 0.8vh);
+}
+
+#password {
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: calc(0.8vw + 0.8vh);
+}
+#no-account {
+    text-align: center;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: calc(0.8vw + 0.8vh);
+    margin-top: 5vh;
+}
+
+#button-container {
+    width: 100%;
+    height: 50vh;
+}
+
+.buttons {
+    margin-top: 10px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
 }
