--- a/public/css/menuStyles.css
+++ b/public/css/menuStyles.css
@@ -10,9 +10,9 @@
 
 .big-button-container a {
     position: relative;
-    top: 50%;
+    top: 30%;
     left: 50%;
-    bottom: 150%;
+    margin: 5vh;
     transform: translate(-50%, -50%);
     font-size: calc(2.5vw + 2.5vh);
     width: 40vw;
@@ -20,17 +20,32 @@
     display: block;
 }
 
-.goal h1 {
-    left: 20%;
+.text-container {
     position: relative;
     top: 50%;
-    color: white;
+    left: 50%;
+    width: 80vw;
+    height: 80vh;
+    margin: 5vh 5vh 5vh 5vh;
+    transform: translate(-50%, -50%);
+    font-size: calc(1.0vw + 1.0vh);
+    background: linear-gradient(90deg, rgb(255, 255, 255), rgb(245, 245, 245) );
+    border-radius: 15px;
+    text-align: center;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.goal p {
-    left: 10%;
-    position: relative;
-    top: 10%;
-    font-size: large;
+
+.text-container h1, h3, p, ul {
+    
+    margin-top: 3vh;
+    margin-left: 2vw;
+}
+
+
+
+.text-container li {
+    margin-top: 0.5vh;
 }
 
 
