--- a/public/css/player/upgradesStyles.css
+++ b/public/css/player/upgradesStyles.css
@@ -8,6 +8,8 @@
     background-color: white;
     border-radius: 50px;
     padding: 1vh 1vw;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: calc(0.8vw + 0.8vh);
 }
 
 #shop-container h2{
@@ -20,7 +22,7 @@ button.buy.error {
 }
 
 button.buy.bought {
-    background-color: green
+    background-color: rgb(127, 255, 148)
 }
 
 div#upgrades {
@@ -30,13 +32,15 @@ div#upgrades {
     justify-items: center;
 }
 
-button, #backButton {
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 10px;
-    cursor: pointer;
+.upgrade-button, #backButton {
+    text-decoration: none;
+    background-color: aquamarine;
+    margin: 1vh 1vw 1vh 1vw;
+}
+
+.upgrade-button:hover, #backButton:hover {
+    color: black;
+    background-color: rgb(109, 218, 181);
 }
 
 #imgContainer {
