--- a/public/css/player/profileStyles.css
+++ b/public/css/player/profileStyles.css
@@ -8,6 +8,8 @@
     background-color: white;
     border-radius: 50px;
     padding: 1vh 1vw;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: calc(0.8vw + 0.8vh);
 }
 
 #profile-container h2{
@@ -18,14 +20,21 @@
     margin-top: 10vh;
     display: flex;
     justify-content: space-around;
+    width: 100%;
+    height: 50vh;
 }
 
 #shops a {
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+    background-color: aquamarine;
+    margin-top: 1vh;
+    /* border: none; */
+    /* padding: 10px 20px;
     border-radius: 10px;
-    cursor: pointer;
+    cursor: pointer; */
     text-decoration: none;
+}
+
+#shops a:hover {
+    color: black;
+    background-color: rgb(109, 218, 181);
 }
