--- a/public/css/menuStyles.css
+++ b/public/css/menuStyles.css
@@ -22,11 +22,9 @@
 
 .text-container {
     position: relative;
-    top: 50%;
-    left: 50%;
     width: 80vw;
     height: 80vh;
-    margin: 5vh 5vh 5vh 5vh;
+    margin: 45vh 50vw 40vh 50vw;
     transform: translate(-50%, -50%);
     font-size: calc(1.0vw + 1.0vh);
     background: linear-gradient(90deg, rgb(255, 255, 255), rgb(245, 245, 245) );
@@ -37,7 +35,7 @@
 }
 
 .text-container h1, h3, p, ul {
-    
+
     margin-top: 3vh;
     margin-left: 2vw;
 }
