--- a/public/css/menuStyles.css
+++ b/public/css/menuStyles.css
@@ -20,17 +20,34 @@
     display: block;
 }
 
-.text-container {
-    position: relative;
+.container {
+    position: absolute;
+    width: 82vw;
+    height: 82vh;
+    margin: 7vh 10vw 7vh 10vw;
+    background: linear-gradient(90deg, rgb(255, 255, 255), rgb(245, 245, 245) );
+    border-radius: 15px;
+}
+
+.color-container {
+    position: absolute;
     width: 80vw;
     height: 80vh;
-    margin: 45vh 50vw 40vh 50vw;
-    transform: translate(-50%, -50%);
+    margin: 1vh 1vw 1vh 1vw;
+    background: linear-gradient(90deg, rgb(127, 255, 212), rgb(127, 255, 220));
+    border-radius: 15px;
+}
+
+.text-container {
+    position: absolute;
+    width: 78vw;
+    height: 78vh;
+    margin: 1vh 1vw 1vh 1vw;
+    /* transform: translate(-50%, -50%); */
     font-size: calc(1.0vw + 1.0vh);
     background: linear-gradient(90deg, rgb(255, 255, 255), rgb(245, 245, 245) );
     border-radius: 15px;
     text-align: center;
-    display: block;
     font-family: Arial, Helvetica, sans-serif;
 }
 
