--- a/public/css/player/profileStyles.css
+++ b/public/css/player/profileStyles.css
@@ -14,6 +14,7 @@
 
 #profile-container h2{
     text-align: center;
+    margin-bottom: 1vh;
 }
 
 #shops {
@@ -31,6 +32,7 @@
 }
 
 #skins {
+    margin-top: 5vh;
     display: flex;
     justify-content: space-around;
     height: 30vh;
