--- a/public/css/authentication.css
+++ b/public/css/authentication.css
@@ -15,11 +15,12 @@
     flex-direction: column;
     justify-content: center;
     padding: 1vh 1vw;
-    margin: 1vh;
+    margin: 1.5vh;
 }
 
 #input-container input {
     height: 5vh;
+    padding: 0.5vw;
 }
 
 /* #submit-container {
