--- a/public/css/navStyles.css
+++ b/public/css/navStyles.css
@@ -58,11 +58,12 @@ nav#navbar ul {
 }
 
 nav#navbar ul li {
-    padding: 0px 2%;
+    padding: 1.0vh 1.0vw;
     display: inline;
 }
 
 nav#navbar a {
+    padding: 1.0vh 1.5vw;
     text-decoration: none;
     color: black;
 }
