--- a/public/css/authentication.css
+++ b/public/css/authentication.css
@@ -38,6 +38,19 @@
     color: black;
     background-color: rgb(109, 218, 181);
 }
+#tos-button {
+    margin-top: 2vh;
+    text-decoration: none;
+    background-color: aquamarine;
+    margin-bottom: 100vh;
+}
+
+#tos-button:hover {
+    padding-right: 2vw;
+    padding-left: 2vw;
+    color: black;
+    background-color: rgb(109, 218, 181);
+}
 
 #username {
     font-family: "Google Sans", Roboto, Arial, sans-serif;
@@ -55,6 +68,7 @@
     height: 50vh;
     display: grid;
 }
+
 
 .buttons {
     margin: 1vh 1vw 1vh 1vw;
