--- a/public/css/player/profileStyles.css
+++ b/public/css/player/profileStyles.css
@@ -38,10 +38,20 @@
     height: 30vh;
 }
 
-#skins #bicycleSkin, #skins #staminaSkin {
+#skins #bicycleSkin {
     display: grid;
     grid-template-rows: 70% 30%;
     justify-content: space-between;
+}
+
+#skins #staminaSkin {
+    display: grid;
+    grid-template-rows: 60% 10% 30%;
+    justify-content: space-between;
+}
+
+#staminaSkin #staminaSkinStamina{ 
+    text-align: center;
 }
 
 #skins img {
